# CUIA-AutoVisionAR

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: app.py  config.py  face_recognition_utils.py  user_discoveries.py  utils.py
app/data/: car_data.csv  discoveries.json  users.txt
app/static/: style.css
app/templates/: all_discoveries.html  camara.html  discovered_cars.html  facial_login.html  index.html  login.html  manual.html  register.html
